# RAG-tutor

./: .env.example  .gitignore  README.md  description.md  pyproject.toml  reproduce_issue.py
app/: chatbot.py  front.py
app/pages/: ingest.py
data/processed/: contents.json
data/vector_db/qdrant/: meta.json
data/vector_db/qdrant/collection/simple_chunking_first_50/: storage.sqlite
notebooks/: advanced_ingest.ipynb  bm25.ipynb  embedding_demo.ipynb  simple_ingest.ipynb
src/ingest/: advanced_ingest.py  embeddings.py  simple_ingest.py
src/retrieval/: rag_agent.py  simple_rag.py  vectorstore.py
src/util/: embeddings.py  env_check.py  llm.py  ollama.py  stemming.py  vectorstore.py
