[project]
name = "rag-tutor"
version = "0.1.0"
description = ""
authors = [
    {name = "Dusan Jevtovic",email = "dusankitic@mail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
