[project]
name = "rag-tutor"
version = "0.1.0"
description = ""
authors = [
    {name = "Dusan Jevtovic",email = "dusankitic@mail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pypdf (>=6.7.1,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.2.13,<2.0.0)",
    "torch (==2.2.2)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
