[project]
name = "rag-tutor"
version = "0.1.0"
description = ""
authors = [
    {name = "Dusan Jevtovic",email = "dusankitic@mail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "pypdf (>=6.7.1,<7.0.0)",
    "langchain-community (>=0.3.0,<0.4.0)",
    "langchain-text-splitters (>=0.3.0,<0.4.0)",
    "langchain-core (>=0.3.0,<0.4.0)",
    "torch (==2.2.2)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "langchain-openai (>=0.2.0,<0.3.0)",
    "langchain-ollama (>=0.2.0,<0.3.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "qdrant-client (>=1.12.0,<2.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "langsmith (>=0.1.112,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
